# aitp-verifier-py

./: .gitignore  README.md  pyproject.toml  run_conformance.py
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  ci.yml
aitp_verifier/: __init__.py  aid.py  b64.py  crypto.py  delegation.py  envelope.py  errors.py  handshake.py  identity.py  jcs.py  jwk.py  jws.py  keys.py  manifest.py  minter.py  revocation.py  sessionbundle.py  sigfield.py  tct.py  timeutil.py  verify.py  voucher.py
tests/: conftest.py  test_conformance.py  test_kat.py  test_signed_examples.py
